# verified-codegen

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
.vericode/bench/humaneval/: results.jsonl
.vericode/sessions/05d94c71098b/: context.json  critique.json  critique.md  draft_spec.md  implementation.dfy  internal_spec.dfy  meta.json  prompt.txt
.vericode/sessions/137f95b60582/: critique.json  meta.json
.vericode/sessions/1c2bcc0236aa/: draft_spec.md  internal_spec.dfy  meta.json
.vericode/sessions/3bb63d7c8bd7/: meta.json
.vericode/sessions/3f8c33a0c0f6/: critique.json  critique.md  draft_spec.md  implementation.dfy  internal_spec.dfy  meta.json
.vericode/sessions/4cc5109aaf5a/: critique.json  critique.md  draft_spec.md  implementation.dfy  internal_spec.dfy  meta.json
.vericode/sessions/906ab53ad2a2/: context.json  draft_spec.md  internal_spec.dfy  meta.json  prompt.txt
.vericode/sessions/e0078cab06e9/: context.json  critique.md  meta.json  prompt.txt
docs/: README.md  pr-verification.md  verified-codegen.md
github-action/: action.yml
src/vericode/: __init__.py  cli.py  models.py  pipeline.py  preflight.py
src/vericode/dafny/: errors.py  (+3 more)
tests/: test_bench_humaneval.py  test_codegen_sanitize.py  test_dafny_adapter.py  test_error_parser.py  test_golden_path.py  test_integration_dafny.py  test_pipeline_mocked.py  test_pipeline_smoke.py  test_pr_ingest.py  test_pr_pipeline_mocked.py  test_pr_verify.py  test_sanitize.py  test_sanitize_pr_spec.py  test_sanitize_verify_pr.py  test_symbol_context.py  test_verifiability.py  test_verify_fixes.py
(+905 files in other folders)
