[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vericode"
version = "0.1.0"
description = "AI-assisted verified code generation via Dafny"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "openai>=1.40.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
bench = [
    "human-eval>=1.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
vericode = "vericode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
